--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "barcode-wasm-react",
   "version": "1.0.0",
-  "description": "",
+  "description": "A barcode scanner app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,9 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
-    "path": "^0.12.7",
-    "quagga": "^0.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -31,6 +28,7 @@
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
-    "wasm-loader": "^1.3.0"
+    "wasm-loader": "^1.3.0",
+    "path": "^0.12.7"
   }
 }
